question number 4 completed